@@ -1,20 +1,24 @@
 package bookstoread;
-
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class BookShelf {
-    private final List<String> books = new ArrayList<>();
 
-    public List<String> books() {
-        return Collections.unmodifiableList(books);
+    private final List<Book> books = new ArrayList<>();
+
+    public List<Book> books() {
+        // immutable
+        return List.copyOf(books);
     }
 
-    public void add(String... booksToAdd) {
-        books.addAll(Arrays.asList(booksToAdd));
+    // Ajout de plusieurs livres à la fois
+    public void add(Book... newBooks) {
+        books.addAll(Arrays.asList(newBooks));
     }
 
-    public List<String> arrange() {
-        books.sort(Comparator.naturalOrder());
-        return books;
+    public List<Book> arrange() {
+        return books.stream()
+                .sorted(Comparator.comparing(Book::getTitle))
+                .toList();
     }
 }
